--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.0"
 
     defaultConfig {
         applicationId "cbedoy.materialdesignexample"
@@ -21,9 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.+'
-    compile 'com.android.support:support-v4:20.+'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
-    compile 'com.android.support:recyclerview-v7:20.+'
-    compile 'com.android.support:cardview-v7:20.+'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile "com.android.support:cardview-v7:21.0.0"
+    compile "com.android.support:recyclerview-v7:21.0.0"
+    compile "com.android.support:palette-v7:21.0.0"
 }
