--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "cbedoy.materialdesignexample"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -23,8 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile "com.android.support:cardview-v7:21.0.0"
     compile "com.android.support:recyclerview-v7:21.0.0"
     compile "com.android.support:palette-v7:21.0.0"
+    compile 'com.github.traex.rippleeffect:library:1.2.2'
+    compile 'com.melnykov:floatingactionbutton:1.0.7'
 }
