--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile "com.android.support:palette-v7:21.0.0"
     compile 'com.github.traex.rippleeffect:library:1.2.2'
     compile 'com.melnykov:floatingactionbutton:1.0.7'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
