--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.github.traex.rippleeffect:library:1.2.2'
     compile 'com.melnykov:floatingactionbutton:1.0.7'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
