--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,29 @@ android {
         exclude 'LICENSE.txt'
     }
 
+    sourceSets {
+        androidTest.setRoot('src/test')
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
 }
 
+robolectric {
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+}
+
+
 dependencies {
+
+    repositories {
+        mavenCentral()
+    }
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
@@ -41,13 +61,11 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.0.7'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    androidTestCompile 'org.hamcrest:hamcrest-integration:1.1'
-    androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
-    androidTestCompile('junit:junit:4.+') {
+    compile 'org.hamcrest:hamcrest-core:1.3'
+    androidTestCompile('junit:junit:4.11') {
         exclude module: 'hamcrest-core'
     }
-    androidTestCompile('org.robolectric:robolectric:2.3') {
+    androidTestCompile('org.robolectric:robolectric:2.4') {
         exclude module: 'classworlds'
         exclude module: 'commons-logging'
         exclude module: 'httpclient'
@@ -60,11 +78,14 @@ dependencies {
         exclude module: 'plexus-container-default'
         exclude module: 'plexus-interpolation'
         exclude module: 'plexus-utils'
-        exclude module: 'support-v4'
         exclude module: 'wagon-file'
         exclude module: 'wagon-http-lightweight'
         exclude module: 'wagon-provider-api'
     }
-    compile files('libs/robolectric-gradle-plugin-0.14.0.jar')
-    compile files('libs/robolectric-2.4.jar')
+    androidTestCompile 'com.squareup:fest-android:1.0.+'
+
+
+
 }
+
+
